--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "2D map generation algorithms implementaion"
 keywords = ["2d", "game development", "algorithm", "bsp"]
-categories = ["2d", "game development", "algorithm", "bsp"]
+categories = ["2d", "procgen", "bsp"]
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/theseatoad/map-gen-2d"
