--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "map-gen-2d"
 version = "0.1.0"
 edition = "2021"
 description = "2D map generation algorithms implementaion"
-keywords = ["2d", "game development", "algorithm", "bsp"]
+keywords = ["2d", "procgen", "bsp"]
 categories = ["2d", "procgen", "bsp"]
 license = "MIT OR Apache-2.0"
 readme = "README.md"
